--- a/css/main.css
+++ b/css/main.css
@@ -519,11 +519,11 @@ a {
   justify-content: space-between;
 }
 
-.team-socials-footer__item:hover .socials {
-  fill: #FFF;
+.team-socials-footer__item:hover {
+  background-color: #2196F3;
 }
 
-.team-socials-footer__item-two {
+.team-socials-footer__item {
   width: 44px;
   height: 44px;
   display: flex;
@@ -533,32 +533,14 @@ a {
   border-radius: 50%;
 }
 
-.team-socials-footer__item-two:hover, .team-socials-footer__item-two:focus {
-  background-color: #2196F3;
+.subscribe-form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 12px;
 }
-
-button {
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #FFF;
-  text-align: center;
-  font-family: "Roboto";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px; /* 187.5% */
-  letter-spacing: 0.96px;
-}
-
-.label-section {
-  margin-top: 72px;
-  margin-bottom: 94px;
-}
-
-.text-footer-two {
+.subscribe-form__label {
+  width: 358px;
   color: #FFF;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -567,36 +549,37 @@ button {
   line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
-  margin-bottom: 20px;
 }
-
-.label-socials {
+.subscribe-form__input {
   width: 358px;
   height: 50px;
-  margin-top: 108px;
-}
-
-.input-social {
+  margin-top: 20px;
+  padding: 15px 16px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-
-.label-btn {
+.subscribe-form__btn {
   width: 200px;
   height: 50px;
   border-radius: 4px;
   background: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
-  text-align: center;
-  font-family: "Roboto";
   font-size: 16px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 1.87; /* 187.5% */
+  line-height: 30px; /* 187.5% */
   letter-spacing: 0.96px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.subscribe-form__svg {
+  fill: #FFF;
+  width: 24px;
+  height: 24px;
 }
 
 .backdrop {
