--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -78,11 +78,11 @@
     justify-content: space-between;
 }
 
-.team-socials-footer__item:hover .socials {
-    fill: #FFF;
+.team-socials-footer__item:hover {
+    background-color: #2196F3;
 }
 
-.team-socials-footer__item-two {
+.team-socials-footer__item {
     width: 44px;
     height: 44px;
     display: flex;
@@ -92,70 +92,55 @@
     border-radius: 50%;
 }
 
-.team-socials-footer__item-two:hover, .team-socials-footer__item-two:focus {
-    background-color: #2196F3;
-    
-}
+.subscribe-form {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 12px;
 
-button {
-    width: 200px;
-    height: 50px;
-    border-radius: 4px;
-    background: #2196F3;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: #FFF;
-    text-align: center;
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 30px; /* 187.5% */
-    letter-spacing: 0.96px;
-}
+    &__label {
+        width: 358px;
+        color: #FFF;
+        font-family: 'Roboto', sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 0.42px;
+        text-transform: uppercase;
+    }
 
-.label-section {
-    margin-top: 72px;
-    margin-bottom: 94px;
-}
+    &__input {
+        width: 358px;
+        height: 50px;
+        margin-top: 20px;
+        padding: 15px 16px;
+        border-radius: 4px;
+        border: 1px solid rgba(255, 255, 255, 0.30);
+        background: rgba(33, 150, 243, 0.00);
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    }
 
-.text-footer-two {
-    color: #FFF;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    letter-spacing: 0.42px;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-}
+    &__btn {
+        width: 200px;
+        height: 50px;
+        border-radius: 4px;
+        background: #2196F3;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        color: #FFF;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 30px; /* 187.5% */
+        letter-spacing: 0.96px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
 
-
-.label-socials {
-    width: 358px;
-    height: 50px;
-    margin-top: 108px;
-}
-
-.input-social {
-    border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.30);
-    background: rgba(33, 150, 243, 0.00);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-}
-
-.label-btn {
-    width: 200px;
-    height: 50px;
-    border-radius: 4px;
-    background: #2196F3;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    color: #FFF;
-    text-align: center;
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.87; /* 187.5% */
-    letter-spacing: 0.96px;
+        &__svg {
+            fill: #FFF;
+            width: 24px;
+            height: 24px;
+        }
 }
