--- a/sass/components/portfolio/_main.scss
+++ b/sass/components/portfolio/_main.scss
@@ -1,12 +1,97 @@
+.main {
+  padding: 94px 0;
+}
+
+.filters {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+
 .filters-btn {
-    width: 125px;
-    height: 38px;
-    border-radius: 4px;
-    background: #F5F4FA; 
+  padding: 6px 22px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+  color: #212121;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.62;
+  letter-spacing: 0.48px;
+
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+    color: #ffffff;
+  }
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+
+  &__item {
+    width: 370px;
+    border: 1px solid #eee;
+    background-color: #fff;
+    box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
+      0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+    padding-bottom: 20px;
+  }
+
+  &__thumb {
+    width: 370px;
+    height: 294px;
+    margin-bottom: 20px;
+    position: relative;
+  }
+
+  &__photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  &__info {
+    padding: 0 24px;
+  }
+
+  &__title {
+    margin-bottom: 4px;
     color: #212121;
-    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 2;
+    letter-spacing: 1.08px;
+  }
+
+  &__text {
+    color: #757575;
     font-size: 16px;
-    font-weight: 500;
-    line-height: 26px; /* 162.5% */
+    font-weight: 400;
+    line-height: 1.87;
     letter-spacing: 0.48px;
+  }
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
+
+  &__text {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.55;
+    letter-spacing: 0.54px;
+  }
 }
