--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,20 +1,71 @@
 .backdrop {
+    display: flex;
     justify-content: center;
     align-items: center;
-    contain: content;
     position: fixed;
-    
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.20);
+    z-index: 10;
+    width: 100%;
+    height: 100%;
 }
 
-.modal-title {
-    color: #212121;
-    text-align: center;
-    font-family: 'Roboto';
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+.modal {
+    width: 528px;
+    position: absolute;
+    border-radius: 4px;
+    background: #FFF;
+    z-index: 11;
+    padding: 40px;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
+    &__title {
+        color: #212121;
+        text-align: center;
+        font-family: 'Roboto';
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+
+    }
+
+    &__btn-close {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50px;
+    }
+
+    &__svg-close {
+        width: 18px;
+        height: 18px;
+        fill: #000000;
+    }
+
+    &__label {
+        color: #757575;
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 0.12px;
+    }
+
+    &__btn {
+        width: 200px;
+        height: 50px;
+        border-radius: 4px;
+        background-color: #2196F3;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        color: #FFF;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 30px; /* 187.5% */
+        letter-spacing: 0.96px;
+    }
 }
 
 .close {
@@ -101,10 +152,4 @@
     line-height: 24px;
     letter-spacing: 0.42px;
     text-decoration-line: underline;
-}
-
-.modal-btn {
-    width: 24px;
-    height: 24px;
-    fill: #FFF;
 }
