--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,6 +20,22 @@
     padding: 40px;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
+    &__btn-close {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50px;
+        border: none;
+    }
+
+    &__svg-close {
+        width: 18px;
+        height: 18px;
+        fill: #000000;
+    }
+   
     &__title {
         color: #212121;
         text-align: center;
@@ -28,22 +44,8 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        padding-bottom: 12px;
 
-    }
-
-    &__btn-close {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        width: 30px;
-        height: 30px;
-        border-radius: 50px;
-    }
-
-    &__svg-close {
-        width: 18px;
-        height: 18px;
-        fill: #000000;
     }
 
     &__label {
@@ -65,6 +67,14 @@
         font-weight: 700;
         line-height: 30px; /* 187.5% */
         letter-spacing: 0.96px;
+        border: none;
+    }
+
+    &__input {
+        width: 448px;
+        height: 40px;
+        border-radius: 4px;
+        border: 1px solid rgba(33, 33, 33, 0.20);
     }
 }
 
@@ -80,13 +90,6 @@
     width: 18px;
     height: 18px;
     fill: #FFF;;
-}
-
-.modal-input {
-    width: 448px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.20);
 }
 
 .modal-input:hover, .modal-input:focus {
