--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,20 @@ a {
   padding: 40px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
+.modal__btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  border: none;
+}
+.modal__svg-close {
+  width: 18px;
+  height: 18px;
+  fill: #000000;
+}
 .modal__title {
   color: #212121;
   text-align: center;
@@ -612,19 +626,7 @@ a {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-}
-.modal__btn-close {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50px;
-}
-.modal__svg-close {
-  width: 18px;
-  height: 18px;
-  fill: #000000;
+  padding-bottom: 12px;
 }
 .modal__label {
   color: #757575;
@@ -644,6 +646,13 @@ a {
   font-weight: 700;
   line-height: 30px; /* 187.5% */
   letter-spacing: 0.96px;
+  border: none;
+}
+.modal__input {
+  width: 448px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .close {
@@ -658,13 +667,6 @@ a {
   width: 18px;
   height: 18px;
   fill: #FFF;
-}
-
-.modal-input {
-  width: 448px;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .modal-input:hover, .modal-input:focus {
