--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,7 @@ a {
   width: 216px;
   height: 50px;
   margin: 0 auto;
+  border: none;
 }
 
 .features {
@@ -616,7 +617,9 @@ a {
 .modal__svg-close {
   width: 18px;
   height: 18px;
-  fill: #000000;
+}
+.modal__svg-close:hover, .modal__svg-close:focus {
+  fill: #2196F3;
 }
 .modal__title {
   color: #212121;
@@ -644,15 +647,25 @@ a {
   text-align: center;
   font-size: 16px;
   font-weight: 700;
-  line-height: 30px; /* 187.5% */
+  line-height: 1.87; /* 187.5% */
   letter-spacing: 0.96px;
   border: none;
+  margin: 0 auto;
 }
 .modal__input {
   width: 448px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+}
+.modal__checkbox {
+  color: #757575;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.71; /* 171.429% */
+  letter-spacing: 0.42px;
 }
 
 .close {
@@ -738,6 +751,23 @@ a {
   font-family: "Roboto";
   font-size: 14px;
   font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.42px;
+  text-decoration-line: underline;
+}
+
+.modal-list__item {
+  margin-bottom: 20px;
+}
+
+.modal__accept {
+  padding-bottom: 20px;
+}
+
+.modal__link {
+  color: #2196F3;
+  font-size: 14px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.42px;
