--- a/css/main.css
+++ b/css/main.css
@@ -558,14 +558,14 @@ a {
   padding: 15px 16px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(33, 150, 243, 0);
+  background-color: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .subscribe-form__btn {
   width: 200px;
   height: 50px;
   border-radius: 4px;
-  background: #2196F3;
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
   font-size: 16px;
@@ -612,7 +612,8 @@ a {
   width: 30px;
   height: 30px;
   border-radius: 50px;
-  border: none;
+  stroke: rgba(0, 0, 0, 0.1);
+  background-color: #FFF;
 }
 .modal__svg-close {
   width: 18px;
@@ -629,28 +630,15 @@ a {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding-bottom: 12px;
+  margin-bottom: 12px;
 }
 .modal__label {
   color: #757575;
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.12px;
-}
-.modal__btn {
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  background-color: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #FFF;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.87; /* 187.5% */
-  letter-spacing: 0.96px;
-  border: none;
-  margin: 0 auto;
+  margin-bottom: 4px;
+  text-transform: uppercase;
 }
 .modal__input {
   width: 448px;
@@ -667,6 +655,27 @@ a {
   line-height: 1.71; /* 171.429% */
   letter-spacing: 0.42px;
 }
+.modal__btn {
+  margin-left: 125px;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87; /* 187.5% */
+  letter-spacing: 0.96px;
+  border: none;
+}
+.modal__textarea {
+  margin-top: 4px;
+  resize: none;
+  width: 448px;
+  height: 120px;
+}
 
 .close {
   width: 30px;
@@ -682,10 +691,10 @@ a {
   fill: #FFF;
 }
 
-.modal-input:hover, .modal-input:focus {
+.modal-list__input:hover, .modal-list__input:focus {
   border-radius: 4px;
   border: 1px solid #2196F3;
-  background-image: url("../img/icons/symbol-defs.svg#icon-email-black");
+  background-image: url("../img/icons/symbol-defs.svg#icon-email");
 }
 
 .modal-svg {
@@ -706,14 +715,6 @@ a {
   line-height: normal;
   letter-spacing: 0.12px;
   display: flex;
-}
-
-.modal-textarea {
-  margin-top: 4px;
-  resize: none;
-  padding: 12px 16px;
-  width: 448px;
-  height: 120px;
 }
 
 .modal-textarea::-moz-placeholder {
