--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -355,14 +355,14 @@ a {
   padding: 15px 16px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(33, 150, 243, 0);
+  background-color: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .subscribe-form__btn {
   width: 200px;
   height: 50px;
   border-radius: 4px;
-  background: #2196F3;
+  background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
   font-size: 16px;
