--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -117,7 +117,7 @@
         padding: 15px 16px;
         border-radius: 4px;
         border: 1px solid rgba(255, 255, 255, 0.30);
-        background: rgba(33, 150, 243, 0.00);
+        background-color: rgba(33, 150, 243, 0.00);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     }
 
@@ -125,7 +125,7 @@
         width: 200px;
         height: 50px;
         border-radius: 4px;
-        background: #2196F3;
+        background-color: #2196F3;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
         color: #FFF;
         font-size: 16px;
