--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -27,8 +27,8 @@
         width: 30px;
         height: 30px;
         border-radius: 50px;
-        border: none;
-
+        stroke: rgba(0, 0, 0, 0.10);
+        background-color: #FFF;
     }
 
     &__svg-close {
@@ -48,7 +48,7 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
-        padding-bottom: 12px;
+        margin-bottom: 12px;
 
     }
 
@@ -57,22 +57,8 @@
         font-size: 12px;
         font-weight: 400;
         letter-spacing: 0.12px;
-    }
-
-    &__btn {
-        width: 200px;
-        height: 50px;
-        border-radius: 4px;
-        background-color: #2196F3;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-        color: #FFF;
-        text-align: center;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 1.87; /* 187.5% */
-        letter-spacing: 0.96px;
-        border: none;
-        margin: 0 auto;
+        margin-bottom: 4px;
+        text-transform: uppercase;
     }
 
     &__input {
@@ -91,6 +77,29 @@
         line-height: 1.71; /* 171.429% */
         letter-spacing: 0.42px;
     }
+
+    &__btn {
+        margin-left: 125px;
+        width: 200px;
+        height: 50px;
+        border-radius: 4px;
+        background-color: #2196F3;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        color: #FFF;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 1.87; /* 187.5% */
+        letter-spacing: 0.96px;
+        border: none;
+    }
+
+    &__textarea {
+        margin-top: 4px;
+        resize: none;
+        width: 448px;
+        height: 120px;
+    }
 }
 
 .close {
@@ -107,10 +116,10 @@
     fill: #FFF;;
 }
 
-.modal-input:hover, .modal-input:focus {
+.modal-list__input:hover, .modal-list__input:focus {
     border-radius: 4px;
     border: 1px solid #2196F3;
-    background-image: url("../img/icons/symbol-defs.svg#icon-email-black");
+    background-image: url("../img/icons/symbol-defs.svg#icon-email");
 }
 
 .modal-svg {
@@ -131,14 +140,6 @@
     line-height: normal;
     letter-spacing: 0.12px;
     display: flex;
-}
-
-.modal-textarea {
-    margin-top: 4px;
-    resize: none;
-    padding: 12px 16px;
-    width: 448px;
-    height: 120px;
 }
 
 .modal-textarea::placeholder {
@@ -187,4 +188,3 @@
     letter-spacing: 0.42px;
     text-decoration-line: underline;
 }
-
