--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,118 +20,78 @@
     padding: 40px;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
+
     &__btn-close {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        width: 30px;
-        height: 30px;
-        border-radius: 50px;
-        stroke: rgba(0, 0, 0, 0.10);
-        background-color: #FFF;
-    }
-
-    &__svg-close {
-        width: 18px;
-        height: 18px;
-
-        &:hover, &:focus {
-            fill: #2196F3;
-        }
-    }
-   
-    &__title {
-        color: #212121;
-        text-align: center;
-        font-family: 'Roboto';
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        margin-bottom: 12px;
-
-    }
-
-    &__label {
-        color: #757575;
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 0.12px;
-        margin-bottom: 4px;
-        text-transform: uppercase;
-    }
-
-    &__input {
-        width: 448px;
-        height: 40px;
-        border-radius: 4px;
-        border: 1px solid rgba(33, 33, 33, 0.20);
-    }
-
-    &__checkbox {
-        color: #757575;
-        font-family: 'Roboto';
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.71; /* 171.429% */
-        letter-spacing: 0.42px;
-    }
-
-    &__btn {
-        margin-left: 125px;
-        width: 200px;
-        height: 50px;
-        border-radius: 4px;
-        background-color: #2196F3;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-        color: #FFF;
-        text-align: center;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 1.87; /* 187.5% */
-        letter-spacing: 0.96px;
-        border: none;
-    }
-
-    &__textarea {
-        margin-top: 4px;
-        resize: none;
-        width: 448px;
-        height: 120px;
-    }
-}
-
-.close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
     width: 30px;
     height: 30px;
-    background-color: #FFF;
     border-radius: 50px;
-    margin-left: 490px;
+    stroke: rgba(0, 0, 0, 0.10);
+    background-color: #FFF;
 }
 
-.modal-svg-close {
-    width: 18px;
-    height: 18px;
-    fill: #FFF;;
+ &__svg-close {
+     width: 18px;
+     height: 18px;
+
+     &:hover, &:focus {
+         fill: #2196F3;
+     }
+ }
+   
+ &__title {
+     color: #212121;
+     text-align: center;
+     font-size: 20px;
+     font-weight: 700;
+     margin-bottom: 12px;
+ }
+
+ &__accept {
+     padding-bottom: 20px;
+ }
+
+ &__checkbox {
+     color: #757575;
+     font-family: 'Roboto';
+     font-size: 14px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 24px; /* 171.429% */
+     letter-spacing: 0.42px;
+ }
+
+ &__link {
+     color: #2196F3;
+     font-size: 14px;
+     font-weight: 400;
+     line-height: 24px;
+     letter-spacing: 0.42px;
+     text-decoration-line: underline;
+ }
+
+ &__btn {
+     margin-left: 125px;
+     width: 200px;
+     height: 50px;
+     border-radius: 4px;
+     background-color: #2196F3;
+     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+     color: #FFF;
+     text-align: center;
+     font-size: 16px;
+     font-weight: 700;
+     line-height: 1.87; /* 187.5% */
+     letter-spacing: 0.96px;
+     border: none;
 }
 
-.modal-list__input:hover, .modal-list__input:focus {
-    border-radius: 4px;
-    border: 1px solid #2196F3;
-    background-image: url("../img/icons/symbol-defs.svg#icon-email");
 }
 
-.modal-svg {
-    width: 18px;
-    height: 18px;
-}
-
-.modal-svg:hover, .modal-svg:focus {
-    fill:#2196F3
-}
-
-.modal-label {
+.modal-list__label {
+    text-transform: uppercase;
     color: #757575;
     font-family: 'Roboto';
     font-size: 12px;
@@ -139,47 +99,23 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.12px;
-    display: flex;
 }
 
-.modal-textarea::placeholder {
+.modal-list__input {
+    width: 448px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.20);
+}
+
+.modal-list__textarea {
+    margin-top: 4px;
+    resize: none;
+    width: 448px;
+    height: 120px;
     color: rgba(117, 117, 117, 0.50);
-    font-family: 'Roboto';
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400px;
-    line-height: normal;
-    letter-spacing: 0.12;
 }
 
-.checkbox {
-    color: #757575;
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 171.429% */
-    letter-spacing: 0.42px;
-}
-
-.checkbox-two {
-    color: #2196F3;
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.42px;
-    text-decoration-line: underline;
-}
-
-.modal-list__item {
-    margin-bottom: 20px;
-}
-
-.modal__accept {
-    padding-bottom: 20px;
-}
 .modal__link {
     color: #2196F3;
     font-size: 14px;
