--- a/css/main.css
+++ b/css/main.css
@@ -612,8 +612,13 @@ a {
   width: 30px;
   height: 30px;
   border-radius: 50px;
-  stroke: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.1);
   background-color: #FFF;
+  border: 1px solid #757575;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .modal__svg-close {
   width: 18px;
@@ -630,7 +635,7 @@ a {
   margin-bottom: 12px;
 }
 .modal__accept {
-  padding-bottom: 20px;
+  margin: 26px 0 20px;
 }
 .modal__checkbox {
   color: #757575;
@@ -666,7 +671,6 @@ a {
 }
 
 .modal-list__label {
-  text-transform: uppercase;
   color: #757575;
   font-family: "Roboto";
   font-size: 12px;
@@ -680,6 +684,7 @@ a {
   width: 448px;
   height: 40px;
   border-radius: 4px;
+  position: relative;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
@@ -698,4 +703,10 @@ a {
   line-height: 24px;
   letter-spacing: 0.42px;
   text-decoration-line: underline;
+}
+
+.modal-list__swg {
+  position: absolute;
+  bottom: 20px;
+  left: 12px;
 }/*# sourceMappingURL=main.css.map */
