--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -193,6 +193,11 @@ a {
   background-color: #fff;
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
   padding-bottom: 20px;
+  overflow: hidden;
+}
+.cards-list__item:hover .overlay {
+  transform: translateY(0);
+  transition: transform 1s ease;
 }
 .cards-list__thumb {
   width: 370px;
