--- a/sass/components/portfolio/_main.scss
+++ b/sass/components/portfolio/_main.scss
@@ -37,9 +37,14 @@
     width: 370px;
     border: 1px solid #eee;
     background-color: #fff;
-    box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
-      0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
     padding-bottom: 20px;
+    overflow: hidden;
+
+    &:hover .overlay {
+      transform: translateY(0);
+      transition: transform 1s ease;
+  }
   }
 
   &__thumb {
