--- a/css/main.css
+++ b/css/main.css
@@ -678,13 +678,21 @@ a {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 0.12px;
+  position: relative;
+}
+
+.modal-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
 .modal-list__input {
   width: 448px;
   height: 40px;
   border-radius: 4px;
-  position: relative;
+  margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
@@ -705,8 +713,8 @@ a {
   text-decoration-line: underline;
 }
 
-.modal-list__swg {
+.modal-list__svg {
   position: absolute;
-  bottom: 20px;
+  top: 31px;
   left: 12px;
 }/*# sourceMappingURL=main.css.map */
