--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -83,12 +83,37 @@ a {
   line-height: 31px;
   letter-spacing: 0.03em;
   color: #2196F3;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
+  animation: logo-header 3s linear infinite alternate;
 }
 .logo-link .header__logo-studio {
   color: #000;
+  animation: logo-part 3s linear infinite alternate;
 }
 
+@keyframes logo-header {
+  0% {
+    color: #000;
+  }
+  50% {
+    color: #2196F3;
+  }
+  100% {
+    color: #000;
+  }
+}
+@keyframes logo-part {
+  0% {
+    color: #2196F3;
+  }
+  50% {
+    color: #000;
+  }
+  100% {
+    color: #2196F3;
+  }
+}
 .header-nav {
   width: 285px;
   display: flex;
@@ -142,6 +167,7 @@ a {
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.28px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts__link:hover, .contacts__link:focus {
   color: #2196F3;
@@ -152,6 +178,7 @@ a {
 .contacts__svg {
   margin-right: 10px;
   fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main {
@@ -176,6 +203,7 @@ a {
   font-weight: 500;
   line-height: 1.62;
   letter-spacing: 0.48px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filters-btn:hover, .filters-btn:focus {
   background-color: #2196f3;
@@ -191,9 +219,12 @@ a {
   width: 370px;
   border: 1px solid #eee;
   background-color: #fff;
-  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
   padding-bottom: 20px;
   overflow: hidden;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.cards-list__item:hover {
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
 .cards-list__item:hover .overlay {
   transform: translateY(0);
@@ -240,6 +271,7 @@ a {
   top: 0;
   left: 0;
   padding: 63px 24px;
+  transform: translateY(-100%);
 }
 .overlay__text {
   color: #fff;
@@ -334,9 +366,16 @@ a {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe {
+  width: 570px;
+  padding-top: 12px;
 }
 
 .subscribe-form {
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
@@ -378,6 +417,7 @@ a {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  border: none;
 }
 .subscribe-form__svg {
   fill: #FFF;
