--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list__item:hover, .clients-list__item:focus {
@@ -42,4 +43,5 @@
     width: 106px;
     height: 60px; 
     fill: #AFB1B8; 
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
