--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -90,9 +90,16 @@
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe { 
+    width: 570px;
+    padding-top: 12px;
 }
 
 .subscribe-form {
+    width: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
@@ -136,6 +143,7 @@
         justify-content: center;
         align-items: center;
         gap: 10px;
+        border: none;
     }
 
         &__svg {
