--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -16,10 +16,39 @@
     line-height: 31px;
     letter-spacing: 0.03em;
     color: #2196F3;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-decoration: none;
+    animation: logo-header 3s linear infinite alternate;
 
     .header__logo-studio {
         color: #000;
+        animation: logo-part 3s linear infinite alternate;
+    }
+}
+
+@keyframes logo-header {
+    0% {
+        color: #000;
+    }    
+    50% {
+        color: #2196F3;
+    }
+
+    100% {
+        color: #000;
+    }
+}
+
+@keyframes logo-part {
+    0% {
+        color: #2196F3;
+    }    
+    50% {
+        color: #000;
+    }
+
+    100% {
+        color: #2196F3;
     }
 }
 
@@ -80,6 +109,7 @@
         font-size: 14px;
         font-weight: 500;
     letter-spacing: 0.28px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus {
         color: #2196F3;
@@ -93,5 +123,6 @@
     &__svg {
         margin-right: 10px;
         fill: #757575;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
