--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,7 +28,6 @@
     width: 30px;
     height: 30px;
     border-radius: 50px;
-    color: rgba(0, 0, 0, 0.10);
     background-color: #FFF;
     border: 1px solid #757575;
     margin: 0 auto;
@@ -57,6 +56,7 @@
 
  &__accept {
      margin: 26px 0 20px;
+     color: #757575;
  }
 
  &__checkbox {
@@ -117,18 +117,34 @@
 
 .modal-list__input {
     width: 448px;
-    height: 40px;
+    outline: none;
+    padding: 10px 40px ;
     border-radius: 4px;
     margin-top: 4px;
+    cursor: pointer;
     border: 1px solid rgba(33, 33, 33, 0.20);
+
+    &:hover, &:focus {
+        border: 1px solid #2196F3;
+        & + .modal-list__svg {
+            fill: #2196F3;
+        }
+    }
 }
 
 .modal-list__textarea {
     margin-top: 4px;
     resize: none;
-    width: 448px;
+    width: 100%;
     height: 120px;
-    color: rgba(117, 117, 117, 0.50);
+    border: 1px solid rgba(117, 117, 117, 0.50);
+    padding: 11px 16px;
+    outline: none;
+    cursor: pointer;
+
+    &:hover,&:focus {
+        border: 1px solid #2196F3;
+    }
 }
 
 .modal__link {
@@ -142,6 +158,6 @@
 
 .modal-list__svg {
     position: absolute;
-    top: 31px;
+    top: 28px;
     left: 12px;
 }
