--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -74,7 +74,8 @@
         width: 44px;
         height: 44px;
         border-radius: 50%;
-        background-color: transparent;
+        background-color: transparent ;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 
@@ -82,6 +83,7 @@
         width: 20px;
         height: 20px;
         fill: #AFB1B8;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .team-socials__item:hover .socials {
