--- a/sass/components/portfolio/_main.scss
+++ b/sass/components/portfolio/_main.scss
@@ -20,6 +20,7 @@
   font-weight: 500;
   line-height: 1.62;
   letter-spacing: 0.48px;
+  transition: background-color  250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
@@ -37,9 +38,13 @@
     width: 370px;
     border: 1px solid #eee;
     background-color: #fff;
-    box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
     padding-bottom: 20px;
     overflow: hidden;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+      box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+    }
 
     &:hover .overlay {
       transform: translateY(0);
@@ -91,6 +96,7 @@
   top: 0;
   left: 0;
   padding: 63px 24px;
+  transform: translateY(-100%);
 
   &__text {
     color: #fff;
