--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -35,7 +35,7 @@
             position: absolute;
             bottom: 0;
             background-color: rgba(47, 48, 58, 0.80);
-            color: #FFF;
+            color: getColor('white-primary');
             text-align: center;
             font-family: 'Roboto', sans-serif;
             font-size: 14px;
