--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ a {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
-  color: #212121;
+  color: #000;
   position: relative;
 }
 .nav-list__link:hover, .nav-list__link:focus {
@@ -232,7 +232,7 @@ a {
 }
 
 .features-subtitle {
-  color: #212121;
+  color: #000;
   font-size: 14px;
   font-family: "Roboto";
   font-weight: 700;
@@ -252,7 +252,7 @@ a {
   display: block;
   width: 270px;
   height: 120px;
-  background-color: #F5F4FA;
+  background-color: #fff;
   margin-bottom: 30px;
 }
 
@@ -316,7 +316,7 @@ a {
   position: absolute;
   bottom: 0;
   background-color: rgba(47, 48, 58, 0.8);
-  color: #FFF;
+  color: #fff;
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -440,7 +440,7 @@ a {
 }
 
 .clients-text {
-  color: #212121;
+  color: #000;
   text-align: center;
   font-family: "Roboto";
   font-size: 36px;
@@ -502,7 +502,7 @@ a {
 .footer-socials {
   width: 20px;
   height: 20px;
-  fill: #FFF;
+  fill: #fff;
 }
 
 .footer-contact__logo {
@@ -515,7 +515,7 @@ a {
   display: block;
 }
 .footer-contact__logo-studio {
-  color: #FFFFFF;
+  color: #fff;
 }
 
 .address {
@@ -529,7 +529,7 @@ a {
   gap: 9px;
 }
 .address__geolocation {
-  color: #FFF;
+  color: #fff;
 }
 .address__contacts {
   color: rgba(255, 255, 255, 0.6);
@@ -541,7 +541,7 @@ a {
   width: 206px;
 }
 .footer-join__title {
-  color: #FFF;
+  color: #fff;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.42px;
@@ -585,7 +585,7 @@ a {
 }
 .subscribe-form__label {
   width: 358px;
-  color: #FFF;
+  color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -610,7 +610,7 @@ a {
   border-radius: 4px;
   background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  color: #FFF;
+  color: #fff;
   font-size: 16px;
   font-weight: 700;
   line-height: 30px; /* 187.5% */
@@ -622,7 +622,7 @@ a {
   border: none;
 }
 .subscribe-form__svg {
-  fill: #FFF;
+  fill: #fff;
   width: 24px;
   height: 24px;
 }
