--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,7 +3,7 @@
 }
 
 .clients-text {
-    color: #212121;
+    color: getColor('black-color');
     text-align: center;
     font-family: 'Roboto';
     font-size: 36px;
@@ -24,7 +24,7 @@
     width: 170px;
     height: 92px;
     border-radius: 4px;
-    border: 1px solid #AFB1B8;
+    border: 1px solid getColor('lightgray-color');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,16 +32,16 @@
 }
 
 .clients-list__item:hover, .clients-list__item:focus {
-    border: 1px solid #2196F3;
+    border: 1px solid getColor('blue-color');
 }
 
 .clients-list__item:hover .clients-list__svg {
-    fill: #2196F3;
+    fill: getColor('blue-color');
 }
 
 .clients-list__svg {
     width: 106px;
     height: 60px; 
-    fill: #AFB1B8; 
+    fill: getColor('lightgray-color'); 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
