--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -15,40 +15,40 @@
     font-size: 26px;
     line-height: 31px;
     letter-spacing: 0.03em;
-    color: #2196F3;
+    color: getColor('blue-color');
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-decoration: none;
     animation: logo-header 3s linear infinite alternate;
 
     .header__logo-studio {
-        color: #000;
+        color: getColor('black-color');
         animation: logo-part 3s linear infinite alternate;
     }
 }
 
 @keyframes logo-header {
     0% {
-        color: #000;
+        color: getColor('black-color');
     }    
     50% {
-        color: #2196F3;
+        color: getColor('blue-color');
     }
 
     100% {
-        color: #000;
+        color:getColor('black-color');
     }
 }
 
 @keyframes logo-part {
     0% {
-        color: #2196F3;
+        color: getColor('blue-color');
     }    
     50% {
-        color: #000;
+        color: getColor('black-color');
     }
 
     100% {
-        color: #2196F3;
+        color: getColor('blue-color');
     }
 }
 
@@ -70,11 +70,11 @@
         font-size: 14px;
         line-height: 16px;
         letter-spacing: 0.02em;
-        color: #212121;
+        color: getColor('black-color');
         position: relative;
     
         &:hover, &:focus {
-            color: #2196F3;
+            color: getColor('blue-color');
             &::after {
                 width: 100%;
             }
@@ -87,7 +87,7 @@
             top: 44px;
             width: 0;
             height: 4px;
-            background-color: #2196F3;
+            background-color: getColor('blue-color');
             border-radius: 2px;
             transition: width 250ms linear ;
         }
@@ -105,24 +105,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #757575;
+        color: getColor('gray-color');
         font-size: 14px;
         font-weight: 500;
     letter-spacing: 0.28px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus {
-        color: #2196F3;
+        color: getColor('blue-color');
 
         & .contacts__svg {
-            fill: #2196F3;
+            fill: getColor('blue-color');
         }
     }
     }
 
     &__svg {
         margin-right: 10px;
-        fill: #757575;
+        fill: getColor('gray-color');
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
