--- a/sass/components/portfolio/_main.scss
+++ b/sass/components/portfolio/_main.scss
@@ -14,8 +14,8 @@
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
-  background-color: #f5f4fa;
-  color: #212121;
+  background-color: getColor('layout-bg');
+  color: getColor('advantages-bg');
   font-size: 16px;
   font-weight: 500;
   line-height: 1.62;
@@ -24,8 +24,8 @@
 
   &:hover,
   &:focus {
-    background-color: #2196f3;
-    color: #ffffff;
+    background-color: getColor('blue-color');
+    color: getColor('white-primary');
   }
 }
 
@@ -37,7 +37,7 @@
   &__item {
     width: 370px;
     border: 1px solid #eee;
-    background-color: #fff;
+    background-color: getColor('white-primary');
     padding-bottom: 20px;
     overflow: hidden;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -72,7 +72,7 @@
 
   &__title {
     margin-bottom: 4px;
-    color: #212121;
+    color: getColor('advantages-bg');
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
@@ -80,7 +80,7 @@
   }
 
   &__text {
-    color: #757575;
+    color: getColo('blue-color');
     font-size: 16px;
     font-weight: 400;
     line-height: 1.87;
@@ -99,7 +99,7 @@
   transform: translateY(-100%);
 
   &__text {
-    color: #fff;
+    color: getColor('white-primary');
     font-size: 18px;
     font-weight: 400;
     line-height: 1.55;
