--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,6 @@
+@import "./utils/vars";
+@import "./utils/placeholders";
+@import "./utils/mixins";
 @import "./base/common";
 @import "./components/header";
 @import "./components/hero";
