--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -5,7 +5,7 @@ $colors:(
     'gray-color':#757575,
     'lightgray-color':#AFB1B8,
     'advantages-bg':#212121,
-    'layout-bg':#f5f4fa,
+    'layout-bg':#F5F4FA,
 );
 
 @function getColor($key) {
