--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -197,7 +197,7 @@ a {
   padding: 6px 22px;
   border: none;
   border-radius: 4px;
-  background-color: #f5f4fa;
+  background-color: #F5F4FA;
   color: #212121;
   font-size: 16px;
   font-weight: 500;
