--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -32,7 +32,7 @@
     display: block;
     width: 270px;
     height: 120px;
-    background-color: getColor('white-primary');
+    background-color: getColor('layout-bg');
     margin-bottom: 30px;
 }
 
