--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -15,12 +15,12 @@
         text-transform: uppercase;
         flex-direction: column;
         flex-shrink: 0; 
-        color: #FFF;
+        color: getColor('white-primary');
     }
 
     &-btn {
         display: block;
-        background: #2196F3 ;
+        background: getColor('blue-color');
         border-radius: 4px;
         font-family: 'Roboto' sans-serif;
         font-style: normal;
@@ -28,7 +28,7 @@
         font-size: 16px;
         line-height: 1.88;
         text-align: center;
-        color: #FFFFFF;
+        color: getColor('white-primary');
         width: 216px;
         height: 50px;
         margin: 0 auto;
