--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,10 +1,10 @@
 .team {
     padding-top: 94px;
-    background-color: #F5F4FA;
+    background-color: getColor('layout-bg');
     padding: 94px 0 ;
 
     &__text {
-        color: #212121;
+        color: getColor('advantages-bg');
         text-align: center;
         font-size: 36px;
         font-family: 'Roboto';
@@ -24,7 +24,7 @@
             width: 270px;
             height: 428px;
             border-radius: 0px 0px 4px 4px;
-            background: #FFF;
+            background: getColor('white-primary');
             box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
             margin-right: 30px;
         }
@@ -35,7 +35,7 @@
         }
 
         &__title {
-            color: #212121;
+            color: getColor('advantages-bg');
             text-align: center;
             font-family: 'Roboto';
             font-size: 16px;
@@ -47,7 +47,7 @@
         }
 
         &__paragraph {
-            color: #757575;
+            color: getColor('gray-color');
             text-align: center;
             font-family: 'Roboto';
             font-size: 16px;
@@ -82,15 +82,15 @@
     .socials {
         width: 20px;
         height: 20px;
-        fill: #AFB1B8;
+        fill: getColor('lightgray-color');
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .team-socials__item:hover .socials {
-        fill: #FFFFFF;
+        fill: getColor('white-primary');
     }
     
     .team-socials__item:hover, .team-socials__item:focus {
-        background-color: #2196F3;
+        background-color: getColor('blue-color');
     }
  
